solution/titanic/k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titanic
  labels:
    app: titanic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: titanic
  template:
    metadata:
      labels:
        app: titanic # What is template?
    spec:
      containers:
        - name: titanic
          image: "eu.gcr.io/xccel-266717/titanic:v1"
          args: []
          ports:
              - containerPort: 5000
          volumeMounts:
            - mountPath: /model
              name: model
      volumes:
      - name: gcp-secret-getter
        secret:
            secretName: storage-key
      - name: model
        emptyDir: {}
