solution/titanic/k8/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-service-v2
spec:
  selector:
    app: titanic
    version: v2
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
