solution/titanic/k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-service
spec:
  selector:
    app: titanic
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
